objects/CaseArticleVersion__c.object
<CustomObject>
    <description>Replication of the CaseArticle table to access casearticle fields by BODI adapter</description>
    <fields>
        <fullName>ArticleLanguage__c</fullName>
        <label>ArticleLanguage</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleVersionNumber__c</fullName>
        <label>ArticleVersionNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>CaseId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticleId</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrigCreatedById__c</fullName>
        <description>CreatedById from CaseArticle table</description>
        <label>OrigCreatedById</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrigId__c</fullName>
        <description>CaseArticle Table record Id</description>
        <externalId>true</externalId>
        <label>OrigId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SystemModStamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isDetached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will be used by DW to identify records with the detached articles</description>
        <label>isDetached</label>
        <type>Checkbox</type>
    </fields>
    <label>Case with Article</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>ArticleLanguage__c</columns>
        <columns>ArticleVersionNumber__c</columns>
        <columns>CaseId__c</columns>
        <columns>KnowledgeArticleId__c</columns>
        <columns>OrigCreatedById__c</columns>
        <columns>OrigId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CaseArticleVersion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases with Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>